# PiD

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  environment.yml  justfile  pyproject.toml
docs/: boogu_image.md  dinov2_siglip.md
pid/_src/inference/: cli_utils.py  decoder.py
pid/_src/models/: pid_distill_model.py  pixeldit_model.py
pid/_src/networks/: pixeldit_official.py
