[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pid"
version = "0.1.0"
description = "PID — Pixel Diffusion Inference (standalone subset of linear-vsr)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "NVIDIA CORPORATION & AFFILIATES"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies
# Note: main dependencies are managed in requirements.txt and requirements_minimal.txt
# Only the most basic dependencies are listed here, for basic functionality during pip install -e .
dependencies = [
    # Specific versions will be specified in requirements.txt
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/nvidia/pid"
Repository = "https://github.com/nvidia/pid"

[tool.setuptools]
# Auto-discover all packages

[tool.setuptools.packages.find]
# Include the pid directory and all its subdirectories
where = ["."]
include = ["pid*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
# Include all Python files and other required files
pid = ["py.typed", "**/*.py"]

# Ruff configuration - all-in-one Python tool (replaces black, isort, flake8, etc.)
[tool.ruff]
line-length = 120
target-version = "py310"

# Excluded directories
exclude = [
    "*.ipynb",
    "dist",
    "build",
    ".git",
    ".venv",
    ".eggs",
    ".tox",
    "__pycache__",
]

[tool.ruff.lint]
# Enabled rule sets (consistent with imaginaire4)
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort (import排序)
    "TID252",  # relative-imports
    "T10",     # debugger
]

# Ignored rules (consistent with imaginaire4)
ignore = [
    "E402",  # module-import-not-at-top-of-file
    "E501",  # line-too-long
    "E721",  # type-comparison
    "E741",  # ambiguous-variable-name
    "F541",  # f-string-missing-placeholders
    "F811",  # redefined-while-unused
    "F841",  # unused-variable
]

fixable = ["ALL"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["pid"]
